Changes required by Expedito done / Only missing "U.S." section

--- a/css/custom.css
+++ b/css/custom.css
@@ -196,3 +196,13 @@
 .customFooterSocialNav {
   width: max-content;
 }
+.customLinkSubscribe {
+  background-color: #f72210;
+  color: white;
+  border: 0;
+  width: 150px;
+  height: 40px;
+}
+.customCloudImg {
+  width: 15%;
+}
